💄 Correct z-index in order to fix overlay with nav bar

--- a/frontend/scss/components/molecules/table-component.scss
+++ b/frontend/scss/components/molecules/table-component.scss
@@ -33,7 +33,7 @@
 		display: flex;
 		padding-bottom: 24px;
 		flex-wrap: wrap;
-		z-index: 20;
+		z-index: 15;
 		line-height: 1.6;
 
 		a {
